# Lexical

./: README.md
.github/workflows/: rust.yml
Lexical/: Cargo.toml
lexical/: Cargo.toml
lexical/src/: main.rs
lexical/src/application/: application.rs
lexical/src/component/: component.rs  data_requirements.rs  mod.rs  output.rs  properties.rs  property.rs
lexical/src/location/: error_handler.rs  keywords.rs  location.rs  mod.rs
lexical/src/locations/: keywords.rs  location.rs
lexical/src/parser/: error_handler.rs  keywords.rs  mapping.rs  mod.rs  parser.rs  traits.rs
lexical/src/parsing/: mapping.rs  mod.rs  parser.rs
lexical/src/utils/: file_handler.rs  mod.rs  requester.rs
