[package]
name = "lexical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.18"
serde = { version = "1.0.173", features = ["derive"] }
serde_yaml = "0.9.24"
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = "1.29.1"

starduck = { git = "https://github.com/ChipDepot/StarDuck.git", branch = "main" }
# starduck = {path = "../../StarDuck/starduck"}
