[package]
name = "lexical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.173", features = ["derive"] }
serde_yaml = "0.9.24"
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }

starduck = "0.1"
# starduck = {path = "../../StarDuck/starduck"}

log = "0.4.20"
env_logger = "0.10.0"
url = "2.4.1"
anyhow = "1.0.77"
chrono = { version = "0.4.31", features = ["serde"] }
